hubSide/force-app/main/default/objects/Provision_Sinistre__c/Provision_Sinistre__c.object-meta.xml
<CustomObject>
    <label>Provision Sinistre</label>
    <nameField>
        <label>Provision Sinistre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provisions Sinistre</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>