hubSide/force-app/main/default/objects/Provision_Sinistre__c/fields/case_number__c.field-meta.xml
<CustomField>
    <fullName>case_number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Numéro sinistre</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Provisions Sinistre</relationshipLabel>
    <relationshipName>Provisions_Sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>