hubSide/force-app/main/default/objects/Provision_Sinistre__c/fields/montant_moy__c.field-meta.xml
<CustomField>
    <fullName>montant_moy__c</fullName>
    <label>Montant Moyenné</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>