hubSide/force-app/main/default/objects/Provision_Sinistre__c/fields/Tech_NumberMonth__c.field-meta.xml
<CustomField>
    <fullName>Tech_NumberMonth__c</fullName>
    <formula>VALUE(text(reference_month__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_NumberMonth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>