hubSide/force-app/main/default/objects/Provision_Sinistre__c/fields/Typologie_de_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Typologie_de_sinistre__c</fullName>
    <label>Typologie de sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pickpocketed</fullName>
                <label>Vol toute cause</label>
            </value>
            <value>
                <fullName>Robbed</fullName>
                <label>Vol caractérisé</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <label>Perte</label>
            </value>
            <value>
                <fullName>Broken</fullName>
                <label>Casse</label>
            </value>
            <value>
                <fullName>Oxidised</fullName>
                <label>Oxydation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>